--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     <p>Nel prossimo compito le verranno presentati un insieme di parole da classificare in gruppi. Questo compito richiede l’abilità di classificare il più velocemente possibile e facendo meno errori possibile. Di seguito presentiamo una lista degli elementi e delle categorie a cui appartengono.</p>
     <table align=center>
     <tr><th><strong><font color=#FF0000>Categorie</strong></font></th><th><font color=#FF0000>Elementi</font></th></tr>
-    <tr><td><strong>Io</strong></td><td> 'Io', 'Me', 'Miei', 'Mie', 'Mio', 'Me stesso’</td></tr>
-    <tr><td><strong>Non io:</strong></td><td> 'Loro', 'Lui', 'Lei', 'Suo', 'Suoi', 'Essi'</td></tr>
+    <tr><td><strong>Io</strong></td><td> 'Io', 'Me', 'Mie', 'Mio', 'Me stesso’</td></tr>
+    <tr><td><strong>Non io:</strong></td><td> 'Loro', 'Lui', 'Suo', 'Suoi', 'Essi'</td></tr>
     <tr><td><strong>Vergogna:</strong></td><td> 'Arrossire', 'Imbarazzo', 'Vergogna', 'Vergognoso/a'</td></tr>
     <tr><td><strong>Ansia:</strong></td><td> 'Ansioso/a', 'Tachicardia', 'Tremore', 'Ansia'</td></tr>
     </table>
