--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
         #user-info button:active {
             background-color: #0056b3;
         }
+        table {
+border-collapse:collapse
+}
+td, th {
+border:1px solid #ddd;
+padding:8px;
+}
     </style>
 </head>
 <body>
